[BEAM-3813] Refactor constructors to use only S3Options instead of each param
- Simplify the logic of default value for s3 upload buffer size in bytes.
- Migrate FluentIterable to Java 8 streams.